# GPSModuleGT-U7

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
source/: app_config.py  app_style.py  application_factory.py  command_formatter.py  gps.py  gps_connection_manager.py  gps_controller_facade.py  gps_data.py  gps_data_controller.py  gps_data_exporter.py  gps_statistics.py  gps_update_controller.py  logging_config.py  main.py  main_window.py  nmea_parser.py  panel_factory.py  protocols.py  serial_port.py  settings_dialog.py  settings_mediator.py  view_update_coordinator.py
source/Panels/: __init__.py  base_panel.py  gps_status_panel.py  panel_constants.py  position_panel.py  satellite_panel.py
source/actions/: __init__.py  base_action.py  export_action.py  refresh_action.py  settings_action.py
tests/: conftest.py  test_command_formatter.py  test_gps.py  test_gps_data.py  test_nmea_parser.py
